--- a/src/main/docs/map.adoc
+++ b/src/main/docs/map.adoc
@@ -350,3 +350,42 @@ include::output/map_draw_8_result.txt[]
 
 include::output/map_draw_9_command.txt[]
 include::output/map_draw_9_result.txt[]
+
+image::map_draw.png[]
+
+=== Display
+
+include::commands/map_display_description.txt[]
+
+include::output/map_display_8_command.txt[]
+
+include::commands/map_display.txt[]
+
+include::output/map_display_0_command.txt[]
+include::output/map_display_0_result.txt[]
+
+include::output/map_display_1_command.txt[]
+include::output/map_display_1_result.txt[]
+
+include::output/map_display_2_command.txt[]
+include::output/map_display_2_result.txt[]
+
+include::output/map_display_3_command.txt[]
+include::output/map_display_3_result.txt[]
+
+include::output/map_display_4_command.txt[]
+include::output/map_display_4_result.txt[]
+
+include::output/map_display_5_command.txt[]
+include::output/map_display_5_result.txt[]
+
+include::output/map_display_6_command.txt[]
+include::output/map_display_6_result.txt[]
+
+include::output/map_display_7_command.txt[]
+include::output/map_display_7_result.txt[]
+
+include::output/map_display_8_command.txt[]
+include::output/map_display_8_result.txt[]
+
+image::map_display.png[]
