--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -485,7 +485,63 @@ include::output/layer_validity_2_result.txt[]
 ==== Clip
 
 include::commands/layer_clip_description.txt[]
+
+include::output/layer_clip_4_command.txt[]
+
 include::commands/layer_clip.txt[]
+
+include::output/layer_clip_0_command.txt[]
+include::output/layer_clip_0_result.txt[]
+
+include::output/layer_clip_1_command.txt[]
+include::output/layer_clip_1_result.txt[]
+
+include::output/layer_clip_2_command.txt[]
+include::output/layer_clip_2_result.txt[]
+
+include::output/layer_clip_3_command.txt[]
+include::output/layer_clip_3_result.txt[]
+
+include::output/layer_clip_4_command.txt[]
+include::output/layer_clip_4_result.txt[]
+
+include::output/layer_clip_5_command.txt[]
+include::output/layer_clip_5_result.txt[]
+
+include::output/layer_clip_6_command.txt[]
+include::output/layer_clip_6_result.txt[]
+
+include::output/layer_clip_7_command.txt[]
+include::output/layer_clip_7_result.txt[]
+
+include::output/layer_clip_8_command.txt[]
+include::output/layer_clip_8_result.txt[]
+
+include::output/layer_clip_9_command.txt[]
+include::output/layer_clip_9_result.txt[]
+
+include::output/layer_clip_10_command.txt[]
+include::output/layer_clip_10_result.txt[]
+
+include::output/layer_clip_11_command.txt[]
+include::output/layer_clip_11_result.txt[]
+
+include::output/layer_clip_12_command.txt[]
+include::output/layer_clip_12_result.txt[]
+
+include::output/layer_clip_13_command.txt[]
+include::output/layer_clip_13_result.txt[]
+
+include::output/layer_clip_14_command.txt[]
+include::output/layer_clip_14_result.txt[]
+
+include::output/layer_clip_15_command.txt[]
+include::output/layer_clip_15_result.txt[]
+
+include::output/layer_clip_16_command.txt[]
+include::output/layer_clip_16_result.txt[]
+
+image::layer_clip.png[]
 
 ==== Convex Hull
 
