--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -800,7 +800,63 @@ include::commands/layer_grid_widthheight.txt[]
 ==== Identity
 
 include::commands/layer_identity_description.txt[]
+
+include::output/layer_identity_4_command.txt[]
+
 include::commands/layer_identity.txt[]
+
+include::output/layer_identity_0_command.txt[]
+include::output/layer_identity_0_result.txt[]
+
+include::output/layer_identity_1_command.txt[]
+include::output/layer_identity_1_result.txt[]
+
+include::output/layer_identity_2_command.txt[]
+include::output/layer_identity_2_result.txt[]
+
+include::output/layer_identity_3_command.txt[]
+include::output/layer_identity_3_result.txt[]
+
+include::output/layer_identity_4_command.txt[]
+include::output/layer_identity_4_result.txt[]
+
+include::output/layer_identity_5_command.txt[]
+include::output/layer_identity_5_result.txt[]
+
+include::output/layer_identity_6_command.txt[]
+include::output/layer_identity_6_result.txt[]
+
+include::output/layer_identity_7_command.txt[]
+include::output/layer_identity_7_result.txt[]
+
+include::output/layer_identity_8_command.txt[]
+include::output/layer_identity_8_result.txt[]
+
+include::output/layer_identity_9_command.txt[]
+include::output/layer_identity_9_result.txt[]
+
+include::output/layer_identity_10_command.txt[]
+include::output/layer_identity_10_result.txt[]
+
+include::output/layer_identity_11_command.txt[]
+include::output/layer_identity_11_result.txt[]
+
+include::output/layer_identity_12_command.txt[]
+include::output/layer_identity_12_result.txt[]
+
+include::output/layer_identity_13_command.txt[]
+include::output/layer_identity_13_result.txt[]
+
+include::output/layer_identity_14_command.txt[]
+include::output/layer_identity_14_result.txt[]
+
+include::output/layer_identity_15_command.txt[]
+include::output/layer_identity_15_result.txt[]
+
+include::output/layer_identity_16_command.txt[]
+include::output/layer_identity_16_result.txt[]
+
+image::layer_identity.png[]
 
 ==== Intersection
 
