Add layer intersection, symdifference, update, and union examples to docs.

--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -861,7 +861,63 @@ image::layer_identity.png[]
 ==== Intersection
 
 include::commands/layer_intersection_description.txt[]
+
+include::output/layer_intersection_4_command.txt[]
+
 include::commands/layer_intersection.txt[]
+
+include::output/layer_intersection_0_command.txt[]
+include::output/layer_intersection_0_result.txt[]
+
+include::output/layer_intersection_1_command.txt[]
+include::output/layer_intersection_1_result.txt[]
+
+include::output/layer_intersection_2_command.txt[]
+include::output/layer_intersection_2_result.txt[]
+
+include::output/layer_intersection_3_command.txt[]
+include::output/layer_intersection_3_result.txt[]
+
+include::output/layer_intersection_4_command.txt[]
+include::output/layer_intersection_4_result.txt[]
+
+include::output/layer_intersection_5_command.txt[]
+include::output/layer_intersection_5_result.txt[]
+
+include::output/layer_intersection_6_command.txt[]
+include::output/layer_intersection_6_result.txt[]
+
+include::output/layer_intersection_7_command.txt[]
+include::output/layer_intersection_7_result.txt[]
+
+include::output/layer_intersection_8_command.txt[]
+include::output/layer_intersection_8_result.txt[]
+
+include::output/layer_intersection_9_command.txt[]
+include::output/layer_intersection_9_result.txt[]
+
+include::output/layer_intersection_10_command.txt[]
+include::output/layer_intersection_10_result.txt[]
+
+include::output/layer_intersection_11_command.txt[]
+include::output/layer_intersection_11_result.txt[]
+
+include::output/layer_intersection_12_command.txt[]
+include::output/layer_intersection_12_result.txt[]
+
+include::output/layer_intersection_13_command.txt[]
+include::output/layer_intersection_13_result.txt[]
+
+include::output/layer_intersection_14_command.txt[]
+include::output/layer_intersection_14_result.txt[]
+
+include::output/layer_intersection_15_command.txt[]
+include::output/layer_intersection_15_result.txt[]
+
+include::output/layer_intersection_16_command.txt[]
+include::output/layer_intersection_16_result.txt[]
+
+image::layer_intersection.png[]
 
 ==== Minimum Circle
 
@@ -1206,7 +1262,63 @@ include::commands/layer_simplify.txt[]
 ==== Symmetric Difference
 
 include::commands/layer_symdifference_description.txt[]
+
+include::output/layer_symdifference_4_command.txt[]
+
 include::commands/layer_symdifference.txt[]
+
+include::output/layer_symdifference_0_command.txt[]
+include::output/layer_symdifference_0_result.txt[]
+
+include::output/layer_symdifference_1_command.txt[]
+include::output/layer_symdifference_1_result.txt[]
+
+include::output/layer_symdifference_2_command.txt[]
+include::output/layer_symdifference_2_result.txt[]
+
+include::output/layer_symdifference_3_command.txt[]
+include::output/layer_symdifference_3_result.txt[]
+
+include::output/layer_symdifference_4_command.txt[]
+include::output/layer_symdifference_4_result.txt[]
+
+include::output/layer_symdifference_5_command.txt[]
+include::output/layer_symdifference_5_result.txt[]
+
+include::output/layer_symdifference_6_command.txt[]
+include::output/layer_symdifference_6_result.txt[]
+
+include::output/layer_symdifference_7_command.txt[]
+include::output/layer_symdifference_7_result.txt[]
+
+include::output/layer_symdifference_8_command.txt[]
+include::output/layer_symdifference_8_result.txt[]
+
+include::output/layer_symdifference_9_command.txt[]
+include::output/layer_symdifference_9_result.txt[]
+
+include::output/layer_symdifference_10_command.txt[]
+include::output/layer_symdifference_10_result.txt[]
+
+include::output/layer_symdifference_11_command.txt[]
+include::output/layer_symdifference_11_result.txt[]
+
+include::output/layer_symdifference_12_command.txt[]
+include::output/layer_symdifference_12_result.txt[]
+
+include::output/layer_symdifference_13_command.txt[]
+include::output/layer_symdifference_13_result.txt[]
+
+include::output/layer_symdifference_14_command.txt[]
+include::output/layer_symdifference_14_result.txt[]
+
+include::output/layer_symdifference_15_command.txt[]
+include::output/layer_symdifference_15_result.txt[]
+
+include::output/layer_symdifference_16_command.txt[]
+include::output/layer_symdifference_16_result.txt[]
+
+image::layer_symdifference.png[]
 
 ==== Transform
 
@@ -1216,12 +1328,124 @@ include::commands/layer_transform.txt[]
 ==== Union
 
 include::commands/layer_union_description.txt[]
+
+include::output/layer_union_4_command.txt[]
+
 include::commands/layer_union.txt[]
+
+include::output/layer_union_0_command.txt[]
+include::output/layer_union_0_result.txt[]
+
+include::output/layer_union_1_command.txt[]
+include::output/layer_union_1_result.txt[]
+
+include::output/layer_union_2_command.txt[]
+include::output/layer_union_2_result.txt[]
+
+include::output/layer_union_3_command.txt[]
+include::output/layer_union_3_result.txt[]
+
+include::output/layer_union_4_command.txt[]
+include::output/layer_union_4_result.txt[]
+
+include::output/layer_union_5_command.txt[]
+include::output/layer_union_5_result.txt[]
+
+include::output/layer_union_6_command.txt[]
+include::output/layer_union_6_result.txt[]
+
+include::output/layer_union_7_command.txt[]
+include::output/layer_union_7_result.txt[]
+
+include::output/layer_union_8_command.txt[]
+include::output/layer_union_8_result.txt[]
+
+include::output/layer_union_9_command.txt[]
+include::output/layer_union_9_result.txt[]
+
+include::output/layer_union_10_command.txt[]
+include::output/layer_union_10_result.txt[]
+
+include::output/layer_union_11_command.txt[]
+include::output/layer_union_11_result.txt[]
+
+include::output/layer_union_12_command.txt[]
+include::output/layer_union_12_result.txt[]
+
+include::output/layer_union_13_command.txt[]
+include::output/layer_union_13_result.txt[]
+
+include::output/layer_union_14_command.txt[]
+include::output/layer_union_14_result.txt[]
+
+include::output/layer_union_15_command.txt[]
+include::output/layer_union_15_result.txt[]
+
+include::output/layer_union_16_command.txt[]
+include::output/layer_union_16_result.txt[]
+
+image::layer_union.png[]
 
 ==== Update
 
 include::commands/layer_update_description.txt[]
+
+include::output/layer_update_4_command.txt[]
+
 include::commands/layer_update.txt[]
+
+include::output/layer_update_0_command.txt[]
+include::output/layer_update_0_result.txt[]
+
+include::output/layer_update_1_command.txt[]
+include::output/layer_update_1_result.txt[]
+
+include::output/layer_update_2_command.txt[]
+include::output/layer_update_2_result.txt[]
+
+include::output/layer_update_3_command.txt[]
+include::output/layer_update_3_result.txt[]
+
+include::output/layer_update_4_command.txt[]
+include::output/layer_update_4_result.txt[]
+
+include::output/layer_update_5_command.txt[]
+include::output/layer_update_5_result.txt[]
+
+include::output/layer_update_6_command.txt[]
+include::output/layer_update_6_result.txt[]
+
+include::output/layer_update_7_command.txt[]
+include::output/layer_update_7_result.txt[]
+
+include::output/layer_update_8_command.txt[]
+include::output/layer_update_8_result.txt[]
+
+include::output/layer_update_9_command.txt[]
+include::output/layer_update_9_result.txt[]
+
+include::output/layer_update_10_command.txt[]
+include::output/layer_update_10_result.txt[]
+
+include::output/layer_update_11_command.txt[]
+include::output/layer_update_11_result.txt[]
+
+include::output/layer_update_12_command.txt[]
+include::output/layer_update_12_result.txt[]
+
+include::output/layer_update_13_command.txt[]
+include::output/layer_update_13_result.txt[]
+
+include::output/layer_update_14_command.txt[]
+include::output/layer_update_14_result.txt[]
+
+include::output/layer_update_15_command.txt[]
+include::output/layer_update_15_result.txt[]
+
+include::output/layer_update_16_command.txt[]
+include::output/layer_update_16_result.txt[]
+
+image::layer_update.png[]
 
 ==== Voronoi
 
