--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -773,7 +773,64 @@ image::layer_delaunay.png[]
 ==== Densify
 
 include::commands/layer_densify_description.txt[]
+
+include::output/layer_densify_3_command.txt[]
+
 include::commands/layer_densify.txt[]
+
+include::output/layer_densify_0_command.txt[]
+include::output/layer_densify_0_result.txt[]
+
+include::output/layer_densify_1_command.txt[]
+include::output/layer_densify_1_result.txt[]
+
+include::output/layer_densify_2_command.txt[]
+include::output/layer_densify_2_result.txt[]
+
+include::output/layer_densify_3_command.txt[]
+include::output/layer_densify_3_result.txt[]
+
+include::output/layer_densify_4_command.txt[]
+include::output/layer_densify_4_result.txt[]
+
+include::output/layer_densify_5_command.txt[]
+include::output/layer_densify_5_result.txt[]
+
+include::output/layer_densify_6_command.txt[]
+include::output/layer_densify_6_result.txt[]
+
+include::output/layer_densify_7_command.txt[]
+include::output/layer_densify_7_result.txt[]
+
+include::output/layer_densify_8_command.txt[]
+include::output/layer_densify_8_result.txt[]
+
+include::output/layer_densify_9_command.txt[]
+include::output/layer_densify_9_result.txt[]
+
+include::output/layer_densify_10_command.txt[]
+include::output/layer_densify_10_result.txt[]
+
+include::output/layer_densify_11_command.txt[]
+include::output/layer_densify_11_result.txt[]
+
+include::output/layer_densify_12_command.txt[]
+include::output/layer_densify_12_result.txt[]
+
+include::output/layer_densify_13_command.txt[]
+include::output/layer_densify_13_result.txt[]
+
+include::output/layer_densify_14_result.txt[]
+include::output/layer_densify_14_command.txt[]
+
+include::output/layer_densify_15_result.txt[]
+include::output/layer_densify_15_command.txt[]
+
+include::output/layer_densify_16_result.txt[]
+include::output/layer_densify_16_command.txt[]
+
+image::layer_densify.png[]
+
 
 ==== Dissolve
 
